fix dashboard width overflow

--- a/frontend/src/components/stylesheets/Dashboard.css
+++ b/frontend/src/components/stylesheets/Dashboard.css
@@ -13,6 +13,10 @@
     height: 100%;
 }
 
+.charts {
+    width: 100%;
+}
+
 .chart {
     margin: 0 auto;
     padding-left: 10px;
